--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "repository": "git@github.com:gonghaima/productList-express-server.git",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "build": "babel src --out-dir dist",
-    "serve": "node dist/server.js"
+    "serve": "node dist/index.js"
   },
   "author": "Steven <gonghaima@hotmail.com>",
   "license": "MIT",
