--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "http-status": "^1.3.2",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
