--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Steven <gonghaima@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
@@ -21,6 +22,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5"
   }
 }
