--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
-version: "3"
-
-services:
-  app:
-    image: app
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
+redis:
+  image: redis
+  container_name: cache
+  expose:
+    - 6379
+app:
+  build: ./
+  volumes:
+    - ./:/var/www/app
+  links:
+    - redis
+  ports:
+    - 3000:3000
+  environment:
+    - REDIS_URL=redis://cache
+    - NODE_ENV=development
+    - PORT=3000
+  command: sh -c 'yarn && yarn build &&  yarn serve'
