--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
