--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "jest": "^24.8.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/dist/*"
+    ]
   }
 }
