--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
     "nodemon": "^1.19.1",
